2004-03-11  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c, rsvg-styles.c: added state domination, ability for a
	use's values to overwrite even explicitly set state variables in the
	symbol.
	* rsvg-shapes.c: Fixed image bitmap sizing, may need to give the whole 
	system a good rewrite sometime to avoid having to use crappy libart 
	rotation etc. and eventually make it easier to port to cairo.

2004-03-10  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: exported drawable structures and functions 
	* rsvg-filter.c: made feImage work for internal references (like use)
	* rsvg-css.c: fixed spelling of dodgerblue (was dogerblue)

2004-03-09  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: HUUUUGE fixes to use

2004-03-09  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: made groups "use"able
	* rsvg-styles.c: changed inheritance mechanism

2004-03-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Do something for clahey (bug 105316)
	
2004-03-07  Dom Lachowicz <cinamod@hotmail.com>

	* gtk-engine/*.[ch]: Theme engine now renders SVGs at their display
	size, thus cutting down on a lot of nasty raster scaling
	
2004-03-04  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Forward-port things from Gman
	* rsvg-styles.c: Forward-port patch from Dodji
	* *.c: Use new RsvgPropertyBag interface
	
2004-03-04  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Added final filter: feTile

2004-03-04  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Fixed feDiffuseLighting and feSpecular lighting to scale
	more consistantly

2004-03-03  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Fixed feDiffuseLighting and feSpecular lighting for small
	kernel length at the expense of speed, hopefully this can be optimised later.
	Fixed a "what the hell was I thinking?!" bug in filter dimentioning.
	
2004-03-02  Caleb Moore <c.moore@student.unsw.edu.au>
