@@ -33,6 +33,7 @@
 
 struct _RsvgDefs {
 	GHashTable *hash;
+	GPtrArray *unnamed;
 };
 
 RsvgDefs *
@@ -41,6 +42,7 @@ rsvg_defs_new (void)
 	RsvgDefs *result = g_new (RsvgDefs, 1);
 	
 	result->hash = g_hash_table_new (g_str_hash, g_str_equal);
+	result->unnamed = g_ptr_array_new ();
 	
 	return result;
 }
@@ -54,9 +56,10 @@ rsvg_defs_lookup (const RsvgDefs *defs, const char *name)
 void
 rsvg_defs_set (RsvgDefs *defs, const char *name, RsvgDefVal *val)
 {
-	g_return_if_fail(name);
-
-	g_hash_table_insert (defs->hash, g_strdup (name), val);
+	if (name == NULL)
+		g_ptr_array_add(defs->unnamed, val);
+	else
+		g_hash_table_insert (defs->hash, g_strdup (name), val);
 }
 
 static void
@@ -70,7 +73,12 @@ rsvg_defs_free_each (gpointer key, gpointer value, gpointer user_data)
 void
 rsvg_defs_free (RsvgDefs *defs)
 {
+	guint i;
 	g_hash_table_foreach (defs->hash, rsvg_defs_free_each, NULL);
 	g_hash_table_destroy (defs->hash);
+	for (i = 0; i < defs->unnamed->len; i++)
+		((RsvgDefVal *)g_ptr_array_index(defs->unnamed, i))->free(g_ptr_array_index(defs->unnamed, i));
+
+	g_ptr_array_free(defs->unnamed, FALSE);
 	g_free (defs);
 }
